# kandidatstudent

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.vps.yml  docker-compose.yml
.sqlx/: query-068e0d234e10a53cdbb2e4f1d5d7081f1d691e2305ba2151788d040b5655fdb6.json  query-0fc4fe666fbd3d5da2d7c6d1171686af828dba1dc663182ead72a740697960d1.json  query-1830a87185dc46755f78efe39a434343b589d27135f961349e55a41dd26a52b1.json  query-25be0ae194a8e580ab38fc6e2230ee405c3591cf8ab621f014c61123927acafa.json  query-261e6eb700d39406cbf3573b1463ff281879e3ab855d6bfa9beaf60664c40b31.json  query-2c1b9582cdab4759ce048585b45cda87645e0d7bc99cca37ae4a10c64597b54e.json  query-2c431280baaf58d5b5896a9c98466c1dd8540f6a0d27d38767d9c96bb21f3fa8.json  query-3ee5b16409c4d6f8b46213ce8471093a30a67a5dbe549095706cb14d9a822b2f.json  query-5017bd392f1b3ddc61bbffbf5e58f54215588aa20f470e4271714ee41a5f0917.json  query-507f89057d1eb8b66f26169aef3fbe08dd0d137731443896c7c0bff26509569f.json  query-67564a71fedd9a530b2aff6aac1e058c52a45e557e54fb4c5108d6d40e9e4248.json  query-71c70a6a4a05598715292581f3fb641b8c1d2bde83812fbbbb41bb62598fdb71.json  query-73adec19ed9c34a8c16ada82d6a98a4e2c5acd1dc3b0b13194de82781d8ac7eb.json  query-755ef25cb737f7d08d9ec6fbb47aabc848885a730589232aef322a58b5783c02.json  query-79dcb15ac92a22c274317d426338ab365131069750c6c4bc943f35b79edc6f6f.json  query-813b06d7d6d5e182396fe381d6baa9e0d0915850cd152074b74b6ef1bbc787ee.json  query-82dd818ecf3a18a38783bd08c63d5d81d43e3907942316e1be077e082e9ebe6e.json  query-89fa7e9fc5144d5dbcb32338307b38537af3ee90566e48a3fc1271a0d7e64c57.json  query-8b3154cf24f0b166e9f99e067cd6369a9b50b30b449303035410a030068e1f6f.json  query-8c0a820abaabf7e0d76fa04b99a30f644190af401aa1ac542173be958805fc81.json  query-8dfa391882de2d17708e2c305872ff10aa8657fb216a453ee8b3969018e535a4.json  query-8f5bc149b63136b27309ccbdbde00ec6a6ee6ce31c757edde907950768cd34f9.json  query-92c449e94bb5293fa61fb5ee499e06b37c641eac8d3dfdcdc6ea74afea52b7c3.json  query-a7b535c1181635e141983dec31d1b19bbbc6867348f2bb3644c8bcc404e7fda2.json  query-afcde0d3b4e7bc9648831fab2ddb5d16d3542f455387e81fa40c91a595b9af47.json  query-afcf6a3e190e2dc4a0cca3b6b67198cd82c2fe1cca9bb71cb44813da91d73f91.json  query-afec31a38763bccfd67880b9c75ee80d27521f1e2a78494960087536a5696fc1.json  query-b2c9d6f4e2b191df999c07719773ff0999cd2b862c79f575f5b9560a0a27f6aa.json  query-b788557efdc9fab28848ccfea291923514e00fe846e7144fd3dcd111d9c60832.json  query-bf1619ee5c5dc2ede7d31d254d8572c85c68a7e882987f3b68e39267efd822e9.json  query-c00d732473a8f5b754e7b43e71e9a91649c5aeeab75b22794cbd749e611ff8f6.json  query-c42904940a840c9896841eed77f0761ebdae70596d34c1ffbe198243db5f15c4.json  query-c5cd86ee92dac26894386e86d2e0174366d37c3bf98c2104e80c5ef15ae119db.json  query-d721bd37f0fd8582bae09c0c18fe770c3dcf5b1bb3197528cd833524f7e9270e.json  query-db7473fd32b35376139cc94ab792580e59b26e824f96c5b507a2aff7b4d31fd8.json  query-e1583b87590139bc6d4bd68bf715978e38789cc76af139a2dc3591cd31e0c8f2.json  query-e1c15fcc9c547d62ed0d3e8ceb15d54102bcbb6219156807dfea3e29d45f8e9c.json  query-e435d004f1884b8831646dd4ae296c5ad408aaffd993d01f9494231736d83274.json  query-e858613576591ca52f0896dab8998d17db210a5f5d59aefffd207a9f905a0859.json  query-ec5450ae0c6ebd2304b8d240bdbb61a119eb97bc27d7c5dc01e413b4ef4be50f.json  (+1 more)
crates/admin/: Cargo.toml
crates/admin/src/: auth.rs  config.rs  error.rs  main.rs  router.rs  state.rs
crates/admin/src/handlers/: health.rs  mod.rs  overrides.rs  revalidate.rs  scrape.rs  search.rs  stats.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  main.rs  router.rs  state.rs
crates/api/src/handlers/: health.rs  institutions.rs  mod.rs  outcomes.rs  professional_fields.rs  programs.rs  search.rs  specialties.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  seed.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: config.rs  ingest.rs  main.rs  worker.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: admission_cycle.rs  institution.rs  lib.rs  min_bal_history.rs  pool.rs  professional_field.rs  program_offering.rs  salary_outcome.rs  scrape_job.rs  specialty.rs
crates/scraper-bg/: Cargo.toml
crates/scraper-bg/src/: lib.rs  su.rs
crates/scraper-core/: Cargo.toml
crates/scraper-core/schemas/: program_extract.v1.json
crates/scraper-core/src/: extract.rs  http.rs  lib.rs  robots.rs  s3.rs  validate.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs  reindex.rs
crates/search/src/indexes/: programs.rs
docker/: Caddyfile
docker/admin/: Dockerfile
docker/api/: Dockerfile
docker/postgres/: Dockerfile
docker/worker/: Dockerfile
migrations/: 20260501000000_init_extensions.sql  20260501000100_core_enums.sql  20260501000200_institutions.sql  20260501000300_academic_units.sql  20260501000400_professional_fields.sql  20260501000500_specialties.sql  20260501000600_program_offering.sql  20260501000700_admission_and_exams.sql  20260501000800_min_bal_history.sql  20260501000900_salary_outcomes.sql  20260501001000_name_alias_and_joint.sql  20260501001100_raw_sources.sql  20260501001200_scraper_state.sql  20260501001300_program_override.sql
seeds/: STATUS.md  institution_branches.sql  institutions.sql  programs_batch1.sql  programs_batch2.sql  programs_batch3.sql  programs_batch4.sql  programs_batch5.sql  programs_tu_sofia.sql  programs_vtu.sql  scrape_jobs.sql  specialties.sql
