[package]
name    = "admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kandidatstudent-admin"
path = "src/main.rs"

[dependencies]
domain          = { path = "../domain" }
persistence     = { path = "../persistence" }
search          = { path = "../search" }
axum            = { workspace = true }
axum-extra      = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
utoipa          = { workspace = true }
utoipa-axum     = { workspace = true }
sqlx            = { workspace = true }
meilisearch-sdk = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
chrono          = { workspace = true }
uuid            = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
dotenvy         = { workspace = true }
config          = { workspace = true }
constant_time_eq = { workspace = true }
secrecy         = { workspace = true }
reqwest         = { workspace = true }
