[package]
name    = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kandidatstudent-cli"
path = "src/main.rs"

[dependencies]
domain       = { path = "../domain" }
persistence  = { path = "../persistence" }
search       = { path = "../search" }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = { workspace = true }
dotenvy      = { workspace = true }
config          = { workspace = true }
meilisearch-sdk = { workspace = true }
