[package]
name    = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_with   = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
rust_decimal = { workspace = true }
thiserror    = { workspace = true }
sqlx         = { workspace = true }
meilisearch-sdk = { workspace = true }
anyhow       = { workspace = true }
utoipa       = { workspace = true }
