[package]
name    = "jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kandidatstudent-worker"
path = "src/main.rs"

[dependencies]
domain        = { path = "../domain" }
persistence   = { path = "../persistence" }
search           = { path = "../search" }
meilisearch-sdk  = { workspace = true }
scraper-core  = { path = "../scraper-core" }
scraper-bg    = { path = "../scraper-bg" }
apalis        = { workspace = true }
apalis-cron   = { workspace = true }
sqlx          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
dotenvy       = { workspace = true }
config        = { workspace = true }
reqwest       = { workspace = true }
bytes         = { workspace = true }
aws-config    = { workspace = true }
aws-sdk-s3    = { workspace = true }
slug          = { workspace = true }
rust_decimal  = { workspace = true }
