[package]
name    = "search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
domain          = { path = "../domain" }
persistence     = { path = "../persistence" }
meilisearch-sdk = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sqlx            = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
